:rocket: add Calistenia and some images, i will change later

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/calistenia.css">
     <title>Rotina de Treino</title>
 </head>
 <body>
@@ -25,15 +25,25 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div class="main-content">
-            <h1 class="primary-text">Nunca é tarde para começar!</h1>
-            <h2 class="second-text">Acompanhe nosso conteúdo e mude de vida</h2>
-            <div class="btns">
-                <button class="btn-exp">Doe um café</button>
+    <section>
+        <div class="container">
+            <div class="panel active" style="background-image: url(/img/abs.webp);">
+                <h3>Abdomen</h3>
+            </div>
+            <div class="panel" style="background-image: url(/img/braco.jpg);">
+                <h3>Braços</h3>
+            </div>
+            <div class="panel" style="background-image: url(/img/peito.jpg);">
+                <h3>Peitoral</h3>
+            </div>
+            <div class="panel" style="background-image: url(/img/costas.jpg);">
+                <h3>Costas</h3>
+            </div>
+            <div class='panel' style="background-image: url(/img/pernas.jpg);">
+                <h3>Membros Inferiores</h3>
             </div>
         </div>
-    </main>
+    </section>
     <footer>
         <div class="footer-content">
             <h3>Bernardo Villanova</h3>
