:rocket: button is setting and configure

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -27,8 +27,8 @@
     </header>
     <section>
         <div class="container">
-            <div class="panel active" style="background-image: url(/img/abs.webp);">
-                <h3>Abdomen</h3>
+            <div class="panel active" style="background-image: url(/img/abs.jpg);">     
+                <button><a href="#">Abdomen</a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
                 <h3>Braços</h3>
@@ -39,7 +39,7 @@
             <div class="panel" style="background-image: url(/img/costas.jpg);">
                 <h3>Costas</h3>
             </div>
-            <div class='panel' style="background-image: url(/img/pernas.jpg);">
+            <div class='panel' style="background-image: url(/img/quad.jpg);">
                 <h3>Membros Inferiores</h3>
             </div>
         </div>
