:dart: every button is setting

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -31,16 +31,16 @@
                 <button><a href="#">Abdomen</a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
-                <h3>Braços</h3>
+                <button><a href="#">Braços</a></button>
             </div>
             <div class="panel" style="background-image: url(/img/peito.jpg);">
-                <h3>Peitoral</h3>
+                <button><a href="#">Peitoral</a></button>
             </div>
             <div class="panel" style="background-image: url(/img/costas.jpg);">
-                <h3>Costas</h3>
+                <button><a href="#">Costas</a></button>
             </div>
             <div class='panel' style="background-image: url(/img/quad.jpg);">
-                <h3>Membros Inferiores</h3>
+                <button><a href="#">Membros Inferiores</a></button>
             </div>
         </div>
     </section>
