:rocket: all bottom is ok

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -28,19 +28,19 @@
     <section>
         <div class="container">
             <div class="panel active" style="background-image: url(/img/abs.jpg);">     
-                <button><a href="#">Abdomen</a></button>
+                <button><a href="#"><span>Abdomen</span>    <span id="abs" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
-                <button><a href="#">Braços</a></button>
+                <button><a href="#"><span>Braços</span>    <span id="bra" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/peito.jpg);">
-                <button><a href="#">Peitoral</a></button>
+                <button><a href="#"><span>Peitoral</span>    <span id="pei" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/costas.jpg);">
-                <button><a href="#">Costas</a></button>
+                <button><a href="#"><span>Costas</span>    <span id="cos" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class='panel' style="background-image: url(/img/quad.jpg);">
-                <button><a href="#">Membros Inferiores</a></button>
+                <button><a href="#"><span>Pernas</span>    <span id="qua" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
         </div>
     </section>
