--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/calistenia.css">
+    <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
     <title>Rotina de Treino</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
     <section>
         <div class="container">
             <div class="panel active" style="background-image: url(/img/abs.jpg);">     
-                <button><a href="#"><span>Abdomen</span>    <span id="abs" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
+                <button><a href="./calistenia/abdomen.html"><span>Abdomen</span>    <span id="abs" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
                 <button><a href="#"><span>Braços</span>    <span id="bra" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
@@ -47,7 +48,7 @@
     <footer>
         <div class="footer-content">
             <h3>Bernardo Villanova</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus odio sed!</p>
+            <p>Este é um site, feito para organizar toda minha rotina de treino que irei seguir, caso tenha interesse em seguir meus passos, terá todo liberdade de usar o conteúdo!</p>
         </div>
         <div class="footer-bottom">
             <p>copyright &copy;2023 codeOpacity. designed by <span>nethunt</span></p>
