--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -32,7 +32,7 @@
                 <button><a href="./calistenia/abdomen.html"><span>Abdomen</span>    <span id="abs" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
-                <button><a href="#"><span>Braços</span>    <span id="bra" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
+                <button><a href="./calistenia/braco.html"><span>Braços</span>    <span id="bra" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/peito.jpg);">
                 <button><a href="#"><span>Peitoral</span>    <span id="pei" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
