--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -35,7 +35,7 @@
                 <button><a href="./calistenia/braco.html"><span>Braços</span>    <span id="bra" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/peito.jpg);">
-                <button><a href="#"><span>Peitoral</span>    <span id="pei" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
+                <button><a href="./calistenia/chest.html"><span>Peitoral</span>    <span id="pei" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/costas.jpg);">
                 <button><a href="#"><span>Costas</span>    <span id="cos" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
