fix the img of abs

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -28,7 +28,7 @@
     </header>
     <section>
         <div class="container">
-            <div class="panel active" style="background-image: url(/img/abs.jpg);">     
+            <div class="panel active" style="background-image: url(/img/Abs.jpg);">     
                 <button><a href="./calistenia/abdomen.html"><span>Abdomen</span>    <span id="abs" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/braco.jpg);">
