every on calisthenic is ok

--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -38,10 +38,10 @@
                 <button><a href="./calistenia/chest.html"><span>Peitoral</span>    <span id="pei" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class="panel" style="background-image: url(/img/costas.jpg);">
-                <button><a href="#"><span>Costas</span>    <span id="cos" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
+                <button><a href="./calistenia/costa.html"><span>Costas</span>    <span id="cos" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
             <div class='panel' style="background-image: url(/img/quad.jpg);">
-                <button><a href="#"><span>Pernas</span>    <span id="qua" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
+                <button><a href="./calistenia/pernas.html"><span>Pernas</span>    <span id="qua" class="eye"><i class="fa-regular fa-eye"></i></span></a></button>
             </div>
         </div>
     </section>
