start the workout plan

--- a/src/treino.html
+++ b/src/treino.html
@@ -6,36 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/pernas.css">
-    <link rel="shortcut icon" href="../../img/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/treino.css">
+    <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
     <title>Rotina de Treino</title>
 </head>
 <body>
+    
     <header>
         <div class="menu-content"> 
             <h1 class="logo">Bern.</h1>
             <nav class="header-menu">
                 <ul class="list-items">
-                    <li><a href="../index.html">HOME</a></li>
-                    <li><a href="../treino.html">TREINO</a></li>
-                    <li><a href="../calistenia.html">CALISTENIA</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="treino.html">TREINO</a></li>
+                    <li><a href="calistenia.html">CALISTENIA</a></li>
                     <li><a href="#">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main>
-        <div class="bar-quad">
-            <h2 class="txt-quad">Quadriceps / Calves (Panturilhas) / Posterior </h2>
-        </div>
-            <img id="img-quad" src="../../gif/quad.gif" alt="">
-            <img src="../../gif/squad.gif" alt="" height="360px">
-            <img id="img-quad2" src="../../gif/squad2.gif" alt="">
-            <img src="../../gif/squad3.gif" alt="">
-            <img id="img-quad3" src="../../gif/squad4.gif" alt="" height="360px">
-            <img src="../../gif/sit.png" alt="">
-    </main>
+
     <footer>
         <div class="footer-content">
             <h3>Bernardo Villanova</h3>
