--- a/src/calistenia/braco.html
+++ b/src/calistenia/braco.html
@@ -18,7 +18,7 @@
             <nav class="header-menu">
                 <ul class="list-items">
                     <li><a href="../index.html">HOME</a></li>
-                    <li><a href="#">TREINO</a></li>
+                    <li><a href="../treino.html">TREINO</a></li>
                     <li><a href="../calistenia.html">CALISTENIA</a></li>
                     <li><a href="#">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
