TODO the trainning plan

--- a/src/treino.html
+++ b/src/treino.html
@@ -26,7 +26,8 @@
             </nav>
         </div>
     </header>
-
+    <!-- TODO
+    https://www.youtube.com/watch?v=4V8IDxmbvD0 -->
     <footer>
         <div class="footer-content">
             <h3>Bernardo Villanova</h3>
