--- a/src/treino.html
+++ b/src/treino.html
@@ -26,8 +26,165 @@
             </nav>
         </div>
     </header>
-    <!-- TODO
-    https://www.youtube.com/watch?v=4V8IDxmbvD0 -->
+    <main>
+        <div class="bar-segunda">
+            <h2 class="txt-segunda">Segunda-Feira</h2>
+        </div>
+        <div class="est">
+            <h2 class="s-1">1°</h2>
+            <img src="/gif/Treadmill-.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">20 - 30 min</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">2°</h2>
+            <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3°</h2>
+            <img src="/gif/Dumbbell-Curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">4°</h2>
+            <img src="/gif/Diamond-Push-up.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 12 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5°</h2>
+            <img src="/gif/forearm-biceps.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">6°</h2>
+            <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">7°</h2>
+            <img src="/gif/Barbell-Reverse-Curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="bar-segunda">
+            <h2 class="txt-segunda">Terça-Feira</h2>
+        </div>
+        <div class="est">
+            <h2 class="s-1">1°</h2>
+            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">10 - 20 min</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">2°</h2>
+            <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3°</h2>
+            <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">4°</h2>
+            <img src="/gif/bulgarian.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5°</h2>
+            <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimum</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">6°</h2>
+            <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">7°</h2>
+            <img src="/gif/Cross-Body-Mountain-Climber.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimun</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">8°</h2>
+            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimun</h3>
+        </div>
+        <div class="bar-segunda">
+            <h2 class="txt-segunda">Quinta-Feira</h2>
+        </div>
+        <div class="est">
+            <h2 class="s-1">1°</h2>
+            <img src="/gif/Treadmill-.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">15 - 30 min</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">2°</h2>
+            <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3°</h2>
+            <img src="/gif/Barbell-Bent-Over-Row.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">4°</h2>
+            <img src="/gif/dumbbell-shrug.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5°</h2>
+            <img src="/gif/dumbbell-shoulder-press.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">6°</h2>
+            <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">7°</h2>
+            <img src="/gif/Dumbbell-Press.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="bar-segunda">
+            <h2 class="txt-segunda">Sexta-Feira</h2>
+        </div>
+        <div class="est">
+            <h2 class="s-1">1°</h2>
+            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">10 - 20 min</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">2°</h2>
+            <img src="/gif/forearm-biceps.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3°</h2>
+            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimun</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">4°</h2>
+            <img src="/gif/Lying-Leg-Raise.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5°</h2>
+            <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">6°</h2>
+            <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">7°</h2>
+            <img src="/gif/Barbell-Reverse-Curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+    </main>
     <footer>
         <div class="footer-content">
             <h3>Bernardo Villanova</h3>
