--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
-    <title>Rotina de Treino</title>
+    <title>Home</title>
 </head>
 <body>
     
@@ -18,9 +18,9 @@
             <nav class="header-menu">
                 <ul class="list-items">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="treino.html">TREINO</a></li>
-                    <li><a href="calistenia.html">CALISTENIA</a></li>
-                    <li><a href="#">NUTRIÇÃO</a></li>
+                    <li><a href="./src/treino.html">TREINO</a></li>
+                    <li><a href="./src/calistenia.html">CALISTENIA</a></li>
+                    <li><a href="./src/nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </nav>
