--- a/src/calistenia.html
+++ b/src/calistenia.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/104736a142.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/calistenia.css">
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
-    <title>Rotina de Treino</title>
+    <title>Calistenia</title>
 </head>
 <body>
     
@@ -17,10 +17,10 @@
             <h1 class="logo">Bern.</h1>
             <nav class="header-menu">
                 <ul class="list-items">
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="../index.html">HOME</a></li>
                     <li><a href="treino.html">TREINO</a></li>
                     <li><a href="calistenia.html">CALISTENIA</a></li>
-                    <li><a href="#">NUTRIÇÃO</a></li>
+                    <li><a href="nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </nav>
