--- a/src/calistenia/pernas.html
+++ b/src/calistenia/pernas.html
@@ -16,10 +16,10 @@
             <h1 class="logo">Bern.</h1>
             <nav class="header-menu">
                 <ul class="list-items">
-                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../../index.html">HOME</a></li>
                     <li><a href="../treino.html">TREINO</a></li>
                     <li><a href="../calistenia.html">CALISTENIA</a></li>
-                    <li><a href="#">NUTRIÇÃO</a></li>
+                    <li><a href="../nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </nav>
