--- a/src/nutricao.html
+++ b/src/nutricao.html
@@ -41,7 +41,7 @@
             <br><br>
             - <strong>Coma mais gorduras saudáveis:</strong> Gorduras saudáveis, como as encontradas em nozes, sementes, abacate e peixes oleosos, ajudam a manter a saciedade e a manter os níveis de açúcar no sangue estáveis.
             <br><br>
-            - <strong>Coma mais gorduras saudáveis:</strong> A água ajuda a manter o corpo hidratado e pode ajudar a controlar o apetite.
+            - <strong>Beba bastante água:</strong> A água ajuda a manter o corpo hidratado e pode ajudar a controlar o apetite.
         </div>
         <div class="bar-bas">
             <h2 class="txt-bas">Minha Dieta</h2>
