--- a/src/treino.html
+++ b/src/treino.html
@@ -47,21 +47,26 @@
         </div>
         <div class="est">
             <h2 class="s-1">4°</h2>
-            <img src="/gif/Diamond-Push-up.gif" alt="" id="img-est" height="200px">
+            <img src="/gif/ante.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5°</h2>
-            <img src="/gif/forearm-biceps.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <img src="/gif/Diamond-Push-up.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6°</h2>
-            <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
+            <img src="/gif/hammer.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7°</h2>
+            <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">8°</h2>
             <img src="/gif/Barbell-Reverse-Curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
@@ -119,7 +124,7 @@
         <div class="est">
             <h2 class="s-1">2°</h2>
             <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 6 - 8 rep</h3>
+            <h3 class="txt-est">5x 2 - 5 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">3°</h2>
@@ -134,7 +139,7 @@
         <div class="est">
             <h2 class="s-1">5°</h2>
             <img src="/gif/dumbbell-shoulder-press.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">3x 10 - 15 rep (4 KG)</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6°</h2>
@@ -145,6 +150,16 @@
             <h2 class="s-1">7°</h2>
             <img src="/gif/Dumbbell-Press.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">8°</h2>
+            <img src="/gif/ombro1.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">9°</h2>
+            <img src="/gif/Dumbbell-Row.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="bar-segunda">
             <h2 class="txt-segunda">Sexta-Feira</h2>
@@ -172,7 +187,7 @@
         <div class="est">
             <h2 class="s-1">5°</h2>
             <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 2 - 5 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6°</h2>
@@ -182,6 +197,16 @@
         <div class="est">
             <h2 class="s-1">7°</h2>
             <img src="/gif/Barbell-Reverse-Curl.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">8°</h2>
+            <img src="/gif/ombro3.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">9°</h2>
+            <img src="/gif/costas.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
     </main>
