add another ex on friday

--- a/src/treino.html
+++ b/src/treino.html
@@ -67,7 +67,7 @@
         </div>
         <div class="est">
             <h2 class="s-1">8°</h2>
-            <img src="/gif/Barbell-Reverse-Curl.gif" alt="" id="img-est" height="200px">
+            <img src="/gif/ombro3.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="bar-segunda">
@@ -208,6 +208,11 @@
             <h2 class="s-1">9°</h2>
             <img src="/gif/costas.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">10°</h2>
+            <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 8 - 10 rep</h3>
         </div>
     </main>
     <footer>
