--- a/src/treino.html
+++ b/src/treino.html
@@ -53,7 +53,7 @@
         <div class="est">
             <h2 class="s-1">5°</h2>
             <img src="/gif/Diamond-Push-up.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 12 rep</h3>
+            <h3 class="txt-est">3x 6 - 8 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6°</h2>
@@ -68,6 +68,11 @@
         <div class="est">
             <h2 class="s-1">8°</h2>
             <img src="/gif/ombro3.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">9°</h2>
+            <img src="/gif/CHAIR-DIPS.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="bar-segunda">
