--- a/src/hiper.html
+++ b/src/hiper.html
@@ -76,7 +76,50 @@
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="bar-segunda">
-            <h2 class="txt-segunda">Terça-Feira - Dorsal, Biceps & Antebraço</h2>
+            <h2 class="txt-segunda">Terça-Feira - Coxa & Abdômen</h2>
+        </div>
+        <div class="est">
+            <h2 class="s-1">1° - Polichinelo</h2>
+            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">10 - 15 min</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">2° - Agachamento Adutores</h2>
+            <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x Até à Falha</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3° - Levantamento Terra</h2>
+            <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 8 - 10 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">4° - Stiff</h2>
+            <img src="/gif/stiff.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5° - Prancha</h2>
+            <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimum</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">6° - Agachamento Bulgaro</h2>
+            <img src="/gif/bulgarian.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 15 reps</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">7° - Cadeira</h2>
+            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 40s minimun</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">8° - Abs Supra</h2>
+            <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">10x 10 GVT</h3>
+        </div>
+        <div class="bar-segunda">
+            <h2 class="txt-segunda">Quinta-Feira - Dorsal, Biceps & Antebraço</h2>
         </div>
         <div class="est">
             <h2 class="s-1">1° - Esteira</h2>
@@ -122,49 +165,6 @@
             <h2 class="s-1">9° - Rosca Direta Barra</h2>
             <img src="/gif/Barbell-Curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">7x 8 - 12 rep FST-7</h3>
-        </div>
-        <div class="bar-segunda">
-            <h2 class="txt-segunda">Quinta-Feira - Coxa & Abdômen</h2>
-        </div>
-        <div class="est">
-            <h2 class="s-1">1° - Polichinelo</h2>
-            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10 - 15 min</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">2° - Agachamento Adutores</h2>
-            <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">4x Até à Falha</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">3° - Levantamento Terra</h2>
-            <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 8 - 10 rep</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">4° - Stiff</h2>
-            <img src="/gif/stiff.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">5° - Prancha</h2>
-            <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimum</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">6° - Agachamento Bulgaro</h2>
-            <img src="/gif/bulgarian.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 reps</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">7° - Cadeira</h2>
-            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">8° - Abs Supra</h2>
-            <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10x 10 GVT</h3>
         </div>
         <div class="bar-segunda">
             <h2 class="txt-segunda">Sexta-Feira Peitoral, Tríceps & Abdômen</h2>
