--- a/src/treino.html
+++ b/src/treino.html
@@ -33,6 +33,7 @@
         <div class="btns">
             <button class="btn-exp"><a href="adap.html">Adaptação (2x AB)</a></button>
             <button class="btn-exp"><a href="hiper.html">Hipertrofia (ABCD)</a></button>
+            <button class="btn-exp"><a href="hiper2.html">Hipertrofia (2x ABC)</a></button>
             <button class="btn-exp"><a href="choque.html">Força/Choque (ABCDE)</a></button>
             <button class="btn-exp"><a href="deload.html">Deload / RML (ABCD)</a></button>
         </div>
