--- a/src/deload.html
+++ b/src/deload.html
@@ -38,22 +38,22 @@
         <div class="est">
             <h2 class="s-1">2° - Remada Alta</h2>
             <img src="/gif/costas.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">4x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">3° - Enco. Barra Anterior</h2>
             <img src="/gif/encolhimento-ombro.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Encolhimento Halteres</h2>
             <img src="/gif/dumbbell-shrug.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5° - Desenv. Militar</h2>
             <img src="/gif/dumbbell-shoulder-press.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10x 10 GVT</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6° - Panturrilhas</h2>
@@ -63,17 +63,17 @@
         <div class="est">
             <h2 class="s-1">7° - Remada Curv. Pronada</h2>
             <img src="/gif/Barbell-Bent-Over-Row.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">8° - Elevação Lateral</h2>
             <img src="/gif/ombro1.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 6 - 8 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">9° - Remada Unilateral</h2>
             <img src="/gif/Dumbbell-Row.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="bar-segunda">
             <h2 class="txt-segunda">Terça-Feira - Dorsal, Biceps & Antebraço</h2>
@@ -86,42 +86,42 @@
         <div class="est">
             <h2 class="s-1">2° - Flexão de Braços</h2>
             <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 6 - 8 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">3° - Rosca Alternada</h2>
             <img src="/gif/alternada.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Rosca Invertida</h2>
             <img src="/gif/ante.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 12 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5° - Barra Fixa</h2>
             <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">15x Até à Falha</h3>
+            <h3 class="txt-est">5x Até à Falha</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6° - Rosca Martelo</h2>
             <img src="/gif/hammer.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Flexão de Punho</h2>
             <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">8° - Remada Curv. Pronada</h2>
             <img src="/gif/Barbell-Bent-Over-Row.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">9° - Rosca Direta Barra</h2>
             <img src="/gif/Barbell-Curl.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">7x 8 - 12 rep FST-7</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="bar-segunda">
             <h2 class="txt-segunda">Quinta-Feira - Coxa & Abdômen</h2>
@@ -139,32 +139,32 @@
         <div class="est">
             <h2 class="s-1">3° - Levantamento Terra</h2>
             <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 8 - 10 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Stiff</h2>
             <img src="/gif/stiff.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5° - Prancha</h2>
             <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimum</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6° - Agachamento Bulgaro</h2>
             <img src="/gif/bulgarian.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 reps</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Cadeira</h2>
             <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">8° - Abs Supra</h2>
             <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10x 10 GVT</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="bar-segunda">
             <h2 class="txt-segunda">Sexta-Feira Peitoral, Tríceps & Abdômen</h2>
@@ -177,27 +177,27 @@
         <div class="est">
             <h2 class="s-1">2° - Flexão de Braços</h2>
             <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10x Até à Falha</h3>
+            <h3 class="txt-est">5x Até à Falha</h3>
         </div>
         <div class="est">
             <h2 class="s-1">3° - Cadeira</h2>
             <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Testa</h2>
             <img src="/gif/triceps.webp" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5° - Rosca Francesa</h2>
             <img src="/gif/francesa.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 12 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">6° - Flexão de Punho</h2>
             <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Agachamento Adutores</h2>
@@ -207,17 +207,17 @@
         <div class="est">
             <h2 class="s-1">8° - Supino Inclinado</h2>
             <img src="/gif/sup.webp" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">9° - Levantamento Terra</h2>
             <img src="/gif/deadlift.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">10° - Abs Infra</h2>
             <img src="/gif/Lying-Leg-Raise.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10x 10 GVT</h3>
+            <h3 class="txt-est">5x 20 rep</h3>
         </div>
     </main>
     <footer>
