--- a/src/calistenia/abdomen.html
+++ b/src/calistenia/abdomen.html
@@ -26,41 +26,41 @@
         </div>
     </header>
     <main>
-        <div class="bar-crunches">
-            <h2 class="text-crunches">Crunches / Abdominais</h2>
+        <div class="bar-c">
+            <h2 class="text-c">Crunches / Abdominais</h2>
         </div>            
-            <img id="img-crunche" src="../../gif/abs.gif" alt="gif de crunches">
-            <img class="img-crunche" src="../../img/crunches.jpg" alt="imagem de crunches de lado" height="360px">
-        <div class="bar-cross-crunches">
-            <h2 class="text-cross-cr">Cross Crunches / Abdominal Cruzado</h2>
+            <img id="img-c" src="../../gif/abs.gif" alt="gif de crunches">
+            <img id="img-c" src="../../img/crunches.jpg" alt="imagem de crunches de lado">
+        <div class="bar-c">
+            <h2 class="text-c">Cross Crunches / Abdominal Cruzado</h2>
         </div>
-            <img id="img-cross-cr" src="../../gif/cross-abs.gif" alt="Air Cross">
-            <img src="../../gif/air-cross.gif" alt="Cross" height="360px">
-        <div class="bar-mountain-climber">
-            <h2 class="text-mountain-climber">Mountain Climber</h2>
+            <img id="img-c"  src="../../gif/cross-abs.gif" alt="Air Cross">
+            <img id="img-c"  src="../../gif/air-cross.gif" alt="Cross">
+        <div class="bar-c">
+            <h2 class="text-c">Mountain Climber</h2>
         </div>
-            <img id="img-mountain-climber" src="../../gif/Cross-Body-Mountain-Climber.gif" alt="">
-            <img src="../../gif/Mountain-climber.gif" alt="">
-        <div class="bar-leg-raise">
-            <h2 class="text-leg-raise">Leg Raise</h2>
+            <img id="img-c"  src="../../gif/Cross-Body-Mountain-Climber.gif" alt="">
+            <img id="img-c"  src="../../gif/Mountain-climber.gif" alt="">
+        <div class="bar-c">
+            <h2 class="text-c">Leg Raise</h2>
         </div>
-            <img id="img-leg-raise" src="../../gif/Lying-Leg-Raise.gif" alt="">
-            <img src="../../gif/leg.gif" alt="" height="360px">
-        <div class="bar-hell">
-            <h2 class="txt-hell">Heel Touch</h2>
+            <img id="img-c"  src="../../gif/Lying-Leg-Raise.gif" alt="">
+            <img id="img-c"  src="../../gif/leg.gif" alt="">
+        <div class="bar-c">
+            <h2 class="text-c">Heel Touch</h2>
         </div>
-            <img id="img-hell" src="../../gif/Heel-Touch.gif" alt="">
-            <img src="../../gif/heel.gif" alt="" height="360px">
-        <div class="bar-oblique">
-            <h2 class="txt-oblique">Oblique Floor Crunches</h2>
+            <img id="img-c"  src="../../gif/Heel-Touch.gif" alt="">
+            <img id="img-c"  src="../../gif/heel.gif" alt="">
+        <div class="bar-c">
+            <h2 class="text-c">Oblique Floor Crunches</h2>
         </div>
-            <img id="img-oblique" src="../../gif/Oblique-Floor-Crunches.gif" alt="">
-            <img src="../../gif/ob.png" alt="" height="360px">
-        <div class="bar-plank">
-            <h2 class="txt-plank">Plank / Prancha</h2>
+            <img id="img-c"  src="../../gif/Oblique-Floor-Crunches.gif" alt="">
+            <img id="img-c"  src="../../gif/ob.png" alt="" height="360px">
+        <div class="bar-c">
+            <h2 class="text-c">Plank / Prancha</h2>
         </div>
-            <img id="img-plank" src="../../gif/plank.gif" alt="">
-            <img src="../../gif/plank2.gif" alt="" height="360px">
+            <img id="img-c"  src="../../gif/plank.gif" alt="">
+            <img id="img-c"  src="../../gif/plank2.gif" alt="">
     </main>
     <footer>
         <div class="footer-content">
