--- a/src/calistenia/chest.html
+++ b/src/calistenia/chest.html
@@ -26,15 +26,15 @@
         </div>
     </header>
     <main>
-        <div class="bar-pei">
-            <h2 class="txt-pei">Chest / Peitoral</h2>
+        <div class="bar-c">
+            <h2 class="txt-c">Chest / Peitoral</h2>
         </div>
-            <img id="img-pei" src="../../gif/Cross-Arm-Push-up.gif" alt="">
-            <img src="../../gif/Diamond-Push-up.gif" alt="">
-            <img id="img-pei2" src="../../gif/flex-d.gif" alt="">
-            <img id="img-pei4" src="../../gif/char.gif" alt="">
-            <img id="img-pei3" src="../../gif/pushup.gif" alt="" height="360px">
-            <img src="../../gif/parallel.gif" alt="">
+            <img id="img-c" src="../../gif/Cross-Arm-Push-up.gif" alt="">
+            <img id="img-c" src="../../gif/Diamond-Push-up.gif" alt="">
+            <img id="img-c" src="../../gif/flex-d.gif" alt="">
+            <img id="img-c" src="../../gif/char.gif" alt="">
+            <img id="img-c" src="../../gif/pushup.gif" alt="" height="360px">
+            <img id="img-c" src="../../gif/parallel.gif" alt="">
     </main>
     <footer>
         <div class="footer-content">
