--- a/src/calistenia/costa.html
+++ b/src/calistenia/costa.html
@@ -26,20 +26,20 @@
         </div>
     </header>
     <main>
-        <div class="bar-cos">
-            <h2 class="txt-cos">Back (Wing) / Costas</h2>
+        <div class="bar-c">
+            <h2 class="txt-c">Back (Wing) / Costas</h2>
         </div>
-            <img id="img-cos" src="../../gif/chin-up.gif" alt="">
-            <img src="../../gif/pull-up.gif" alt="">
-            <img id="img-cos2" src="../../gif/pull-up2.gif" alt="">
-            <img src="../../gif/ant.gif" alt="" height="360px">
-        <div class="bar-trap">
-            <h2 class="txt-trap">Traps / Trapézio</h2>
+            <img id="img-c" src="../../gif/chin-up.gif" alt="">
+            <img id="img-c" src="../../gif/pull-up.gif" alt="">
+            <img id="img-c" src="../../gif/pull-up2.gif" alt="">
+            <img id="img-c" src="../../gif/ant.gif" alt="" height="360px">
+        <div class="bar-c">
+            <h2 class="txt-c">Traps / Trapézio</h2>
         </div>
-            <img id="img-trap" src="../../gif/trap-scap.gif" alt="">
-            <img src="../../gif/ombro.gif" alt="">
-            <img id="img-trap2" src="../../gif/ombro2.gif" alt="">
-            <img src="../../gif/Scapula-Pull-up.gif" alt="">
+            <img id="img-c" src="../../gif/trap-scap.gif" alt="">
+            <img id="img-c" src="../../gif/ombro.gif" alt="">
+            <img id="img-c" src="../../gif/ombro2.gif" alt="">
+            <img id="img-c" src="../../gif/Scapula-Pull-up.gif" alt="">
     </main>
     <footer>
         <div class="footer-content">
