--- a/src/calistenia/pernas.html
+++ b/src/calistenia/pernas.html
@@ -26,15 +26,15 @@
         </div>
     </header>
     <main>
-        <div class="bar-quad">
-            <h2 class="txt-quad">Quadriceps / Calves (Panturilhas) / Posterior </h2>
+        <div class="bar-c">
+            <h2 class="txt-c">Quadriceps / Calves (Panturilhas) / Posterior </h2>
         </div>
-            <img id="img-quad" src="../../gif/quad.gif" alt="">
-            <img src="../../gif/squad.gif" alt="" height="360px">
-            <img id="img-quad2" src="../../gif/squad2.gif" alt="">
-            <img src="../../gif/squad3.gif" alt="">
-            <img id="img-quad3" src="../../gif/squad4.gif" alt="" height="360px">
-            <img src="../../gif/sit.png" alt="">
+            <img id="img-c" src="../../gif/quad.gif" alt="">
+            <img id="img-c" src="../../gif/squad.gif" alt="" height="360px">
+            <img id="img-c" src="../../gif/squad2.gif" alt="">
+            <img id="img-c" src="../../gif/squad3.gif" alt="">
+            <img id="img-c" src="../../gif/squad4.gif" alt="" height="360px">
+            <img id="img-c" src="../../gif/sit.png" alt="">
     </main>
     <footer>
         <div class="footer-content">
