--- a/src/calistenia/braco.html
+++ b/src/calistenia/braco.html
@@ -27,31 +27,31 @@
         </div>
     </header>
     <main>
-        <div class="bar-ombro">
-            <h2 class="txt-ombro">Shoulders / Ombro</h2>
+        <div class="bar-c">
+            <h2 class="txt-c">Shoulders / Ombro</h2>
         </div>
-            <img id="img-ombro" src="../../gif/ombro.gif" alt="">
-            <img src="../../gif/ombro2.gif" alt="">
-        <div class="bar-biceps">
-            <h2 class="txt-biceps">Biceps</h2>
+            <img id="img-c" src="../../gif/ombro.gif" alt="">
+            <img id="img-c" src="../../gif/ombro2.gif" alt="">
+        <div class="bar-c">
+            <h2 class="txt-c">Biceps</h2>
         </div>
-            <img id="img-biceps" src="../../gif/pull-up.gif" alt="">
-            <img src="../../gif/pull-up2.gif" alt="">
-            <img id="img-biceps2" src="../../gif/chin-up.gif" alt="">
-        <div class="bar-triceps">
-            <h2 class="txt-triceps">Triceps</h2>
+            <img id="img-c" src="../../gif/pull-up.gif" alt="">
+            <img id="img-c" src="../../gif/pull-up2.gif" alt="">
+            <img id="img-c" src="../../gif/chin-up.gif" alt="">
+        <div class="bar-c">
+            <h2 class="txt-c">Triceps</h2>
         </div>
-            <img id="img-triceps" src="../../gif/flex-d.gif" alt="">
-            <img src="../../gif/char.gif" alt="">
-            <img id="img-triceps2" src="../../gif/parallel.gif" alt="">
-            <img id="img-triceps3" src="../../gif/Diamond-Push-up.gif" alt="">
-            <img src="../../gif/Cross-Arm-Push-up.gif" alt="">
-        <div class="bar-ant">
-            <h2 class="txt-ant">Forearms / Antebraço</h2>
+            <img id="img-c" src="../../gif/flex-d.gif" alt="">
+            <img id="img-c" src="../../gif/char.gif" alt="">
+            <img id="img-c" src="../../gif/parallel.gif" alt="">
+            <img id="img-c" src="../../gif/Diamond-Push-up.gif" alt="">
+            <img id="img-c" src="../../gif/Cross-Arm-Push-up.gif" alt="">
+        <div class="bar-c">
+            <h2 class="txt-c">Forearms / Antebraço</h2>
         </div>
-            <img id="img-ant" src="../../gif/chin-up.gif" alt="">
-            <img src="../../gif/ant.gif" alt="" height="360px">
-            <img id="img-ant2" src="../../gif/Cross-Arm-Push-up.gif" alt="">
+            <img id="img-c" src="../../gif/chin-up.gif" alt="">
+            <img id="img-c" src="../../gif/ant.gif" alt="" height="360px">
+            <img id="img-c"src="../../gif/Cross-Arm-Push-up.gif" alt="">
     </main>
     <footer>
         <div class="footer-content">
