--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="primary-text">Nunca é tarde para começar!</h1>
             <h2 class="second-text">Acompanhe nosso conteúdo e mude de vida</h2>
             <div class="btns">
-                <button class="btn-exp">Doe um café</button>
+                <button class="btn-exp"><a href="https://www.buymeacoffee.com/bernardovillan">Buy me a Coffe</a></button>
             </div>
         </div>
     </main>
