--- a/src/hiper.html
+++ b/src/hiper.html
@@ -43,12 +43,12 @@
         <div class="est">
             <h2 class="s-1">3° - Enco. Barra Anterior</h2>
             <img src="/gif/encolhimento-ombro.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">4x 10 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Encolhimento Halteres</h2>
             <img src="/gif/dumbbell-shrug.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 10 - 15 rep</h3>
+            <h3 class="txt-est">4x 10 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">5° - Desenv. Militar</h2>
@@ -58,7 +58,7 @@
         <div class="est">
             <h2 class="s-1">6° - Panturrilhas</h2>
             <img src="/gif/pant.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">4x Até à Falha</h3>
+            <h3 class="txt-est">10x 10 GVT</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Remada Curv. Pronada</h2>
@@ -68,11 +68,16 @@
         <div class="est">
             <h2 class="s-1">8° - Elevação Lateral</h2>
             <img src="/gif/ombro1.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 6 - 8 rep</h3>
+            <h3 class="txt-est">4x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">9° - Remada Unilateral</h2>
             <img src="/gif/Dumbbell-Row.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">10° - Gemeos Sentado</h2>
+            <img src="/gif/gemeos-sentado.webp" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="bar-segunda">
@@ -114,7 +119,12 @@
             <h3 class="txt-est">3x 40s minimun</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">8° - Abs Supra</h2>
+            <h2 class="s-1">8° - Agachamento Livre</h2>
+            <img src="/gif/agachamento-livre.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x 10 - 12 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">9° - Abs Supra</h2>
             <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">10x 10 GVT</h3>
         </div>
@@ -157,12 +167,17 @@
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">8° - Remada Curv. Pronada</h2>
+            <h2 class="s-1">8° - Extensão de Punho</h2>
+            <img src="/gif/extensao-punho.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">9° - Remada Curv. Pronada</h2>
             <img src="/gif/Barbell-Bent-Over-Row.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Rosca Direta Barra</h2>
+            <h2 class="s-1">10° - Rosca Direta Barra</h2>
             <img src="/gif/Barbell-Curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">7x 8 - 12 rep FST-7</h3>
         </div>
@@ -180,9 +195,9 @@
             <h3 class="txt-est">10x Até à Falha</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">3° - Cadeira</h2>
-            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
+            <h2 class="s-1">3° - Supino</h2>
+            <img src="/gif/Dumbbell-Press.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">4° - Testa</h2>
@@ -205,8 +220,8 @@
             <h3 class="txt-est">4x Até à Falha</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">8° - Supino Inclinado</h2>
-            <img src="/gif/sup.webp" alt="" id="img-est" height="200px">
+            <h2 class="s-1">8° - Desenvolvimento Militar</h2>
+            <img src="/gif/dumbbell-shoulder-press.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
