--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <ul class="list-items">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="./src/treino.html">TREINO</a></li>
+                    <li><a href="./src/tmb.html">TMB</a></li>
                     <li><a href="./src/calistenia.html">CALISTENIA</a></li>
                     <li><a href="./src/nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
