--- a/src/hiper.html
+++ b/src/hiper.html
@@ -19,6 +19,7 @@
                 <ul class="list-items">
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="treino.html">TREINO</a></li>
+                    <li><a href="tmb.html">TMB</a></li>
                     <li><a href="calistenia.html">CALISTENIA</a></li>
                     <li><a href="nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
@@ -177,7 +178,12 @@
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Rosca Direta Barra</h2>
+            <h2 class="s-1">9° - Remada Unilateral</h2>
+            <img src="/gif/Dumbbell-Row.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 12 - 15 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">10° - Rosca Direta Barra</h2>
             <img src="/gif/Barbell-Curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">7x 8 - 12 rep FST-7</h3>
         </div>
@@ -190,34 +196,34 @@
             <h3 class="txt-est">10 - 20 min</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">2° - Flexão de Braços</h2>
+            <h2 class="s-1">2° - Supino com Barra</h2>
+            <img src="/gif/Barbell-Bench-Press.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">2x 12 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">3° - Flexão de Braços</h2>
             <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">10x Até à Falha</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">3° - Supino</h2>
+            <h2 class="s-1">4° - Crucifixo</h2>
+            <img src="/gif/Dumbbell-Fly.gif" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">2x 10 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">5° - Supino com Halteres</h2>
             <img src="/gif/Dumbbell-Press.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">4x 10 - 12 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">4° - Testa</h2>
+            <h2 class="s-1">6° - Testa</h2>
             <img src="/gif/triceps.webp" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">5° - Rosca Francesa</h2>
+            <h2 class="s-1">7° - Rosca Francesa</h2>
             <img src="/gif/francesa.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 10 - 12 rep</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">6° - Flexão de Punho</h2>
-            <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 12 - 15 rep</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">7° - Agachamento Adutores</h2>
-            <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">4x Até à Falha</h3>
         </div>
         <div class="est">
             <h2 class="s-1">8° - Desenvolvimento Militar</h2>
