--- a/src/hiper2.html
+++ b/src/hiper2.html
@@ -19,6 +19,7 @@
                 <ul class="list-items">
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="treino.html">TREINO</a></li>
+                    <li><a href="tmb.html">TMB</a></li>
                     <li><a href="calistenia.html">CALISTENIA</a></li>
                     <li><a href="nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
@@ -122,11 +123,6 @@
             <h3 class="txt-est">10 - 15 min</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">1° - Polichinelo</h2>
-            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10 - 15 min</h3>
-        </div>
-        <div class="est">
             <h2 class="s-1">2° - Agachamento Adutores</h2>
             <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">4x Até à Falha</h3>
@@ -147,9 +143,9 @@
             <h3 class="txt-est">3x 10 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">6° - Prancha</h2>
-            <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimum</h3>
+            <h2 class="s-1">6° - Cadeira Extensora</h2>
+            <img src="/gif/cadeira-extensora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x 10 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Elevação Lateral</h2>
@@ -162,9 +158,9 @@
             <h3 class="txt-est">3x 10 - 15 reps</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Cadeira</h2>
-            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
+            <h2 class="s-1">9° - Mesa Flexora</h2>
+            <img src="/gif/mesa-flexora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">10° - Abs Supra</h2>
@@ -266,11 +262,6 @@
             <h3 class="txt-est">10 - 15 min</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">1° - Polichinelo</h2>
-            <img src="/gif/squad3.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">10 - 15 min</h3>
-        </div>
-        <div class="est">
             <h2 class="s-1">2° - Agachamento Adutores</h2>
             <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">4x Até à Falha</h3>
@@ -291,9 +282,9 @@
             <h3 class="txt-est">3x 10 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">6° - Prancha</h2>
-            <img src="/gif/plank.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimum</h3>
+            <h2 class="s-1">6° - Cadeira Extensora</h2>
+            <img src="/gif/cadeira-extensora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x 10 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">7° - Elevação Lateral</h2>
@@ -306,9 +297,9 @@
             <h3 class="txt-est">3x 10 - 15 reps</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Cadeira</h2>
-            <img src="/gif/sit.png" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 40s minimun</h3>
+            <h2 class="s-1">9° - Mesa Flexora</h2>
+            <img src="/gif/mesa-flexora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 12 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">10° - Abs Supra</h2>
