--- a/src/choque.html
+++ b/src/choque.html
@@ -19,6 +19,7 @@
                 <ul class="list-items">
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="treino.html">TREINO</a></li>
+                    <li><a href="tmb.html">TMB</a></li>
                     <li><a href="calistenia.html">CALISTENIA</a></li>
                     <li><a href="nutricao.html">NUTRIÇÃO</a></li>
                     <li><a href="https://www.instagram.com/souobern/"><i class="fa-brands fa-instagram"></i></a></li>
